--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -10,7 +10,7 @@ button
 {
 	display: inline-block;
   border-radius: 4px;
-  background-color: #f4511e;
+  background-color: #3f51b5;
   border: none;
   color: #FFFFFF;
   text-align: center;
@@ -24,26 +24,58 @@ button
   box-shadow: 3px 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-
+.text-line {
+    background-color: transparent;
+    color: black;
+    outline: none;
+    outline-style: none;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: solid #eeeeee 1px;
+    padding: 3px 10px;
+font-family: Arial, Helvetica, sans-serif;
+}
 
 #send
 {
-	margin-left: 83%;
+	margin-left: 75%;
     margin-top: -3.3%;
-    width:5%;
+    width:5.2%;
     height:50px;
 }
+
+#header
+{
+	width:60.1%;
+	height:70px;
+	background-color: #3f51b5;
+	margin-left: 20%;
+	border-top-right-radius: 40px;
+	border-top-left-radius: 40px;
+	box-shadow: 3px 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+
+#onlineuser
+{
+width: 20px;
+height:40%;
+margin-right:5%;
+background-color: grey;
+}
+
 #join
 {
 display: inline-block;
   border-radius: 4px;
-  background-color: #f4511e;
+  background-color: #3f51b5;
   border: none;
   color: #FFFFFF;
   text-align: center;
   font-size: 20px;
-  padding: 5px;
-  width: 80px;
+  padding: 10px;
+  width: 100px;
   transition: all 0.5s;
   cursor: pointer;
   margin: 5px;
@@ -54,10 +86,10 @@ margin-left:0%;
 }
 #message
 {
-	width:35%;
+	width:60%;
 	height:50px;
 
-margin-left: 48%;
+margin-left:20%;
 
 
 
@@ -66,10 +98,11 @@ margin-left: 48%;
 #handle
 {
 	
-	width:20%;
+	width:60%;
 	height:30px;
 	left:3%;
 	top:10%;
+
 }
 
 #label
@@ -84,32 +117,40 @@ margin-left: 48%;
 	margin-left: 25%;
 }
 
+#intro
+{
+	font-size: 50px;
+
+}
+
 
 
 #output
 {
 
-	height:85%;
-	width: 40%;
-	background-color: #F0F0F0;
-	margin-left: 48%;
+	height:80%;
+	width: 60%;
+	background-color: white;
+	margin-left: 20%;
+
 	
 	border: 1px solid #A9A9A9;
 	box-shadow: 3px 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	overflow-x: hidden;
 	overflow-y: auto;
-	border-top-right-radius: 40px;
-	border-top-left-radius: 40px;
+	
    display: inline-block;
+
 
 }
 #bubble
 {
-	background-color: white;
+	background-color: #f0f0f0;
 	margin-left:5%;
-	margin-right:10%;
-  border-radius:20px 50px;
+	margin-right: 10%;
+	border-radius:20px 50px;
   word-wrap: break-word;
+box-shadow: 3px 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
 }
 #textmessage
@@ -118,6 +159,23 @@ margin-left: 48%;
 	padding-top: 3px;
 	padding-right: 30px;
 	font-family: Arial, Helvetica, sans-serif;
+
+}
+
+#initialise
+{
+	width: 40%;
+	height:60%;
+	border:1px solid white;
+	margin-left: 30%;
+	margin-top: 5%;
+	margin-right: auto;
+	box-shadow:  0 0 10px  rgba(0,0,0,0.6);
+			-moz-box-shadow: 0 0 10px  rgba(0,0,0,0.6);
+			-webkit-box-shadow: 0 0 10px  rgba(0,0,0,0.6);
+			-o-box-shadow: 0 0 10px  rgba(0,0,0,0.6);
+	border-radius: 10px;
+	text-align:center;
 }
 
 strong
